--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .DS_Store
 mini_gland_sim/
+acinus/cell_meshes/
+acinus/result*
 duct/my_duct_test.mat
 duct/cell_lumen_prop.mat
 duct/MiniGlandMesh*
